--- a/templates/memes.html
+++ b/templates/memes.html
@@ -92,7 +92,8 @@
             bottom: 0;
             width: 100%;
             height: 50px; /* Define a fixed height, adjust if needed */
-            background-color: #f2f2f2;
+            background-color: #000; /* Changed back to black */
+            color: #fff; /* Ensure text is readable on black background */
             text-align: center;
             padding-top: 10px;
             box-sizing: border-box;
