--- a/templates/memes.html
+++ b/templates/memes.html
@@ -110,7 +110,7 @@
         <h1>Memes</h1>
     </div>
     <div class="content">
-        <div class="summary">Total Memes: {{ meme_count|default(0) }} vids / Total Downloads: {{ total_downloads|default(0) }}</div>
+        <div class="summary">Total Memes: {{ meme_count|default(0) }} assets / Total Downloads: {{ total_downloads|default(0) }}</div>
         <table class="meme-table">
             <thead>
                 <tr>
