--- a/templates/memes.html
+++ b/templates/memes.html
@@ -181,7 +181,8 @@
                         <td class="meme-id">{{ meme.meme_id }}</td>
                         <td class="meme-type">{{ meme.type }}</td>
                         <td class="meme-description">
-                            <a href="{{ url_for('add_point_and_redirect', meme_id=meme.meme_id, url=meme.meme_url) }}" target="_blank">{{ meme.meme_description }}</a>
+                            <a href="{{ url_for('add_point_and_redirect', meme_id=meme.meme_id, url=meme.meme_url) }}" target="_blank">{{ meme.meme_description }}</a> / 
+                            {{ users|selectattr('id', 'equalto', meme.owner)|first.username if users|selectattr('id', 'equalto', meme.owner)|first else 'Unknown' }}
                         </td>
                         <td class="meme-download-counts">{{ meme.meme_download_counts }}</td>
                     </tr>
